--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dependencies": {
         "@vitejs/plugin-vue": "^4.0.0",
         "bootstrap": "^5.2.3",
+        "jquery": "^3.6.3",
         "vue": "^3.2.36",
         "vue-jwt-decode": "^0.1.0",
         "vue-loader": "^17.0.1",
