feat: Login and Logout

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue-jwt-decode": "^0.1.0",
         "vue-loader": "^17.0.1",
         "vue-router": "^4.1.6",
-        "vuex": "^4.0.2"
+        "vuex": "^4.0.2",
+        "vuex-persistedstate": "^4.1.0"
     }
 }
