--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "vue": "^3.2.36",
         "vue-jwt-decode": "^0.1.0",
         "vue-loader": "^17.0.1",
+        "vue-material-design-icons": "^5.2.0",
         "vue-router": "^4.1.6",
         "vuex": "^4.0.2",
         "vuex-persistedstate": "^4.1.0"
